all implementation for cruds everywhere with fixes